--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -30,6 +30,29 @@
     }
 }
 
+.button__secondary {
+    color: $font-accent-secondary-color;
+
+    background-color: $background-light-color;
+    border-radius: 0.4rem;
+
+    &:hover,
+    &:focus {
+        color: $font-light-color;
+        background-color: $font-accent-color;
+        box-shadow: 0rem 0.3rem 0.1rem rgba(0, 0, 0, 0.1),
+                    0rem 0.1rem 0.2rem rgba(0, 0, 0, 0.08),
+                    0rem 0.2rem 0.2rem rgba(0, 0, 0, 0.12);
+    }
+}
+
+.button__secondary--portfolio {
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+    padding-left: 2.2rem;
+    padding-right: 2.2rem;
+}
+
 .button__primary--hero {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -114,4 +137,43 @@
     padding-right: 5.5rem;
     line-height: 1.875;
     letter-spacing: 0.06em;
+}
+
+.overlay__button {
+    @extend %button;
+    position: absolute;
+    padding: 0;
+    right: 0.8rem;
+    top: 0.8rem;
+    width: 3rem;
+    height: 3rem;
+
+    border-radius: 50%;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .icon__close {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        width: 1.1rem;
+        height: 1.1rem;
+
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &:hover,
+    &:focus {
+        background: #f1fdff;
+        border: 1px solid $font-accent-color;
+
+        .icon__close {
+            fill: $font-accent-color;
+        }
+    }
 }
