--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -8,6 +8,7 @@
 @import "./our-team";
 @import "./our-clients";
 @import "./backdrop-container";
+@import "./portfolio";
 @import "./form";
 @import "./footer";
 
