add medium styles

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,53 +1,72 @@
 .footer {
-    font-family: $main-font-family;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.4rem;
-    line-height: 1.71;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $font-light-color;
+  font-family: $main-font-family;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.4rem;
+  line-height: 1.71;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: $font-light-color;
 }
 
 .footer-block {
+  @media screen and (max-width: 47.9rem) {
     & + & {
-        margin-top: 6rem;
+      margin-top: 6rem;
     }
+  }
+
+  @media screen and (min-width: 48rem) {
+  }
 }
 
 .footer-address__text {
-    display: inline-block;
-    margin-bottom: 0.8rem;
+  display: inline-block;
+  margin-bottom: 0.8rem;
+}
+
+.footer-block--mr70 {
+  @media screen and (min-width: 48rem) {
+    flex-basis: 50%;
+    margin-bottom: 6rem;
+  }
+}
+
+.footer-block--larger {
+  max-width: 45rem;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media screen and (min-width: 48rem) {
+    flex-basis: 100%;
+  }
 }
 
 .studio-socials__title {
-    margin-top: 0;
-    margin-bottom: 2rem;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: $main-font-family;
-    font-weight: bold;
-    font-size: 1.4rem;
-    line-height: 1.143;
-    letter-spacing: 0.03em;
-    color: $font-light-color;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: $main-font-family;
+  font-weight: bold;
+  font-size: 1.4rem;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  color: $font-light-color;
 }
 
 .studio-socials {
-    @extend %list;
-    display: flex;
-    justify-content: center;
+  @extend %list;
+  display: flex;
+  justify-content: center;
 }
 
 .studio-socials__item {
-    & + & {
-        margin-left: 0.9rem
-    }
+  & + & {
+    margin-left: 0.9rem;
+  }
 }
 
 .mail-form {
-    text-align: center;
+  text-align: center;
 }
-
-
-
