--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,13 @@ address {
   text-align: center;
 }
 
+.container {
+  min-width: 32rem;
+  margin: 0 auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .nav, .contacts, .mobile-nav__list, .peculiarities, .our-team, .team-member-socials, .clients, .portfolio-nav, .project-cards, .studio-socials {
   list-style: none;
   margin-top: 0;
@@ -423,6 +430,7 @@ address {
   display: flex;
   margin-right: -2.5rem;
   margin-left: -2.5rem;
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
   font-size: 1.4rem;
   line-height: 1.14285;
@@ -677,6 +685,22 @@ address {
   color: inherit;
 }
 
+@media screen and (min-width: 48rem) {
+  .container {
+    max-width: 76.8rem;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .container--flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .page-section {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -712,11 +736,34 @@ address {
   min-width: 32rem;
   max-width: 76.8rem;
   text-align: center;
-  background-size: 48rem 100%;
+  background-size: cover;
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_480x400@1x.jpg");
   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_480x400@1x.jpg");
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .page-section__hero {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_480x400@2x.jpg");
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_480x400@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .page-section__hero {
+    min-width: 76.8rem;
+    max-width: 160rem;
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_768x400@1x.jpg");
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_768x400@1x.jpg");
+  }
+}
+
+@media screen and (min-width: 48rem) and (min-device-pixel-ratio: 2), screen and (min-width: 48rem) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 48rem) and (min-resolution: 192dpi), screen and (min-width: 48rem) and (min-resolution: 2dppx) {
+  .page-section__hero {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_768x400@2x.jpg");
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_768x400@2x.jpg");
+  }
 }
 
 .page-section__hero-title {
@@ -738,13 +785,46 @@ address {
     max-width: 69.6rem;
     font-size: 4.4rem;
     line-height: 1.36;
-    /* or 136% */
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .peculiarities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: -1.5rem;
+    margin-right: -1.5rem;
+    margin-bottom: -1.5rem;
+    margin-left: -1.5rem;
   }
 }
 
 @media screen and (max-width: 47.9rem) {
+  .peculiarities__item {
+    max-width: 45rem;
+    margin-right: auto;
+    margin-left: auto;
+  }
   .peculiarities__item:not(:last-child) {
     margin-bottom: 3rem;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .peculiarities__item {
+    -ms-flex-preferred-size: calc(50% - 4 * 1.5rem);
+        flex-basis: calc(50% - 4 * 1.5rem);
+    max-width: 35.4rem;
+    margin-top: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
   }
 }
 
@@ -781,6 +861,12 @@ address {
   color: #212121;
 }
 
+@media screen and (min-width: 48rem) {
+  .peculiarities__title {
+    text-align: left;
+  }
+}
+
 .peculiarities__description {
   margin-top: 0;
   margin-bottom: 0;
@@ -799,24 +885,47 @@ address {
 }
 
 .our-team {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-top: -1.5rem;
-  margin-bottom: -1.5rem;
-  margin-left: -1.5rem;
-  margin-right: -1.5rem;
+  display: block;
 }
 
-.our-team__item {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+@media screen and (min-width: 48rem) {
+  .our-team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+  }
+}
+
+@media screen and (max-width: 47.9rem) {
+  .our-team__item {
+    max-width: 45rem;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .our-team__item:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .our-team__item {
+    -ms-flex-preferred-size: calc(50% - 4 * 1.5rem);
+        flex-basis: calc(50% - 4 * 1.5rem);
+    max-width: 35.4rem;
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
 }
 
 .team-member {
@@ -888,6 +997,13 @@ address {
   margin-right: 1.5rem;
   margin-bottom: 1.5rem;
   margin-left: 1.5rem;
+}
+
+@media screen and (min-width: 48rem) {
+  .clients__item {
+    -ms-flex-preferred-size: calc(100%/3 - 1.5rem * 6);
+        flex-basis: calc(100%/3 - 1.5rem * 6);
+  }
 }
 
 .clients__link {
@@ -965,10 +1081,23 @@ address {
 }
 
 .portfolio-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-top: -0.75rem;
   margin-right: -0.4rem;
   margin-bottom: calc(4rem - 0.75rem);
   margin-left: -0.4rem;
+}
+
+@media screen and (min-width: 48rem) {
+  .portfolio-nav {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .portfolio-nav__list-item {
@@ -979,32 +1108,59 @@ address {
   margin-left: 0.4rem;
 }
 
-.project-cards {
-  margin-top: -1.5rem;
-  margin-bottom: -1.5rem;
-  margin-left: -1.5rem;
-  margin-right: -1.5rem;
+@media screen and (min-width: 48rem) {
+  .project-cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+  }
 }
 
 .project-cards__item {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-
-.card {
-  text-align: left;
+  border-bottom: 0.1rem solid #eeeeee;
+  border-left: 0.1rem solid #eeeeee;
+  border-right: 0.1rem solid #eeeeee;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card:hover {
+.project-cards__item:hover {
   cursor: pointer;
   -webkit-box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.12), 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.06), 0.1rem 0.4rem 0.6rem rgba(0, 0, 0, 0.16);
           box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.12), 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.06), 0.1rem 0.4rem 0.6rem rgba(0, 0, 0, 0.16);
+}
+
+@media screen and (max-width: 47.9rem) {
+  .project-cards__item {
+    max-width: 45rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .project-cards__item:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .project-cards__item {
+    max-width: 35.4rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+}
+
+.card {
+  text-align: left;
 }
 
 .card__img-wrapper {
@@ -1047,9 +1203,6 @@ address {
   padding-bottom: 2rem;
   padding-right: 2.4rem;
   padding-left: 2.4rem;
-  border-bottom: 0.1rem solid #eeeeee;
-  border-left: 0.1rem solid #eeeeee;
-  border-right: 0.1rem solid #eeeeee;
 }
 
 .project-name {
@@ -1343,13 +1496,36 @@ address {
   color: #ffffff;
 }
 
-.footer-block + .footer-block {
-  margin-top: 6rem;
+@media screen and (max-width: 47.9rem) {
+  .footer-block + .footer-block {
+    margin-top: 6rem;
+  }
 }
 
 .footer-address__text {
   display: inline-block;
   margin-bottom: 0.8rem;
+}
+
+@media screen and (min-width: 48rem) {
+  .footer-block--mr70 {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+    margin-bottom: 6rem;
+  }
+}
+
+.footer-block--larger {
+  max-width: 45rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 48rem) {
+  .footer-block--larger {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 .studio-socials__title {
