--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,6 +22,7 @@
     display: flex;
     margin-right: -2.5rem;
     margin-left: -2.5rem;
+    font-family: $main-font-family;
     font-weight: 500;
     font-size: 1.4rem;
     line-height: 1.14285;
