--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -15,6 +15,10 @@
   margin-right: 1.5rem;
   margin-bottom: 1.5rem;
   margin-left: 1.5rem;
+
+  @media screen and (min-width: 48rem) {
+    flex-basis: calc(100%/3 - 1.5rem * 6);
+  }
 }
 
 .clients__link {
