--- a/sass/layout/_peculiarities.scss
+++ b/sass/layout/_peculiarities.scss
@@ -1,12 +1,35 @@
 .peculiarities {
   @extend %list;
+
+  @media screen and (min-width: 48rem) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: -1.5rem;
+    margin-right: -1.5rem;
+    margin-bottom: -1.5rem;
+    margin-left: -1.5rem;
+  }
 }
 
 .peculiarities__item {
-  &:not(:last-child) {
-    @media screen and (max-width: 47.9rem) {
+  @media screen and (max-width: 47.9rem) {
+    max-width: 45rem;
+    margin-right: auto;
+    margin-left: auto;
+
+    &:not(:last-child) {
       margin-bottom: 3rem;
     }
+  }
+
+  @media screen and (min-width: 48rem) {
+    flex-basis: calc(50% - 4 * 1.5rem);
+    max-width: 35.4rem;
+    margin-top: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
   }
 }
 
@@ -42,6 +65,10 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: $font-accent-secondary-color;
+
+  @media screen and (min-width: 48rem) {
+    text-align: left;
+  }
 }
 
 .peculiarities__description {
