--- a/sass/layout/_backdrop-container.scss
+++ b/sass/layout/_backdrop-container.scss
@@ -1,36 +1,37 @@
 .backdrop-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 999;
-    background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 93.75%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 93.5%;
+  max-width: 45rem;
 
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-    padding-left: 4rem;
-    padding-right: 4rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
 
-    transform: translate(-50%, -50%) scale(1);
-    background: $font-light-color;
-    box-shadow:
-        0rem 0.1rem 0.3rem rgba(0, 0, 0, 0.12),
-        0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.14),
-        0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
-    border-radius: 0.4rem;
+  transform: translate(-50%, -50%) scale(1);
+  background: $font-light-color;
+  box-shadow: 0rem 0.1rem 0.3rem rgba(0, 0, 0, 0.12), 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.14),
+    0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
+  border-radius: 0.4rem;
 
-    transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 75rem) {
+    max-width: 52.8rem;
+  }
 }
-
-
 
 .is-hidden {
   opacity: 0;
