--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -17,7 +17,12 @@
   margin-left: 1.5rem;
 
   @media screen and (min-width: 48rem) {
-    flex-basis: calc(100%/3 - 1.5rem * 6);
+    flex-basis: calc((100% - 1.5rem * 6)/3);
+  }
+
+  @media screen and (min-width: 75rem) {
+    flex-wrap: nowrap;
+    flex-basis: calc((100% - 1.5rem * 12)/6);
   }
 }
 
@@ -45,5 +50,10 @@
       color: $font-accent-color;
       fill: $font-accent-color;
     }
+  }
+
+  @media screen and (min-width: 75rem) {
+    padding-left: 3.1rem;
+    padding-right: 3.1rem;
   }
 }
