--- a/css/main.css
+++ b/css/main.css
@@ -40,14 +40,15 @@ address {
   text-align: center;
 }
 
-.container {
+.container, .container__fixed {
   min-width: 32rem;
+  max-width: 100%;
   margin: 0 auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
-.nav, .contacts, .mobile-nav__list, .peculiarities, .our-team, .team-member-socials, .clients, .portfolio-nav, .project-cards, .studio-socials {
+.nav, .contacts, .mobile-nav__list, .peculiarities, .our-works, .our-team, .team-member-socials, .clients, .portfolio-nav, .project-cards, .studio-socials {
   list-style: none;
   margin-top: 0;
   margin-bottom: 0;
@@ -71,13 +72,39 @@ address {
   background: transparent;
 }
 
-.container {
-  min-width: 32rem;
-  max-width: 120rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  margin-left: auto;
-  margin-right: auto;
+@media screen and (min-width: 48rem) {
+  .container {
+    min-width: 76.8rem;
+    max-width: 100%;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .container {
+    max-width: 120rem;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .container__fixed {
+    max-width: 76.8rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .container__fixed {
+    max-width: 120rem;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  .container--flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .webstudio-logo {
@@ -133,6 +160,13 @@ address {
 .contacts__icon {
   width: 1.4rem;
   height: 1.4rem;
+}
+
+@media screen and (min-width: 75rem) {
+  .contacts__icon {
+    width: 1.6rem;
+    height: 1.6rem;
+  }
 }
 
 .team-member-socials {
@@ -250,6 +284,7 @@ address {
 }
 
 .button__primary {
+  line-height: 1.87;
   color: #ffffff;
   background-color: #2196f3;
   border-radius: 0.4rem;
@@ -289,8 +324,8 @@ address {
 }
 
 .button__primary--send {
-  padding-top: 1.2rem;
-  padding-bottom: 1.2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   padding-right: 2.8rem;
   padding-left: 2.8rem;
 }
@@ -418,7 +453,7 @@ address {
           flex-grow: 1;
 }
 
-@media screen and (max-width: 47.9rem) {
+@media screen and (max-width: 47.9375rem) {
   .nav__wrapper {
     display: none;
   }
@@ -513,8 +548,36 @@ address {
   fill: currentColor;
 }
 
-.contacts__item:not(:last-child) {
-  margin-bottom: 1rem;
+@media screen and (min-width: 75rem) {
+  .contacts--header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.contacts__item--header {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 74.9rem) {
+  .contacts__item--header:not(:last-child) {
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .contacts__item--header {
+    font-size: 1.4rem;
+    line-height: 1.1428;
+  }
+  .contacts__item--header:not(:last-child) {
+    margin-right: 3rem;
+  }
 }
 
 .contacts__item--footer {
@@ -685,25 +748,20 @@ address {
   color: inherit;
 }
 
-@media screen and (min-width: 48rem) {
-  .container {
-    max-width: 76.8rem;
-  }
-}
-
-@media screen and (min-width: 48rem) {
-  .container--flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
-
 .page-section {
   padding-top: 6rem;
   padding-bottom: 6rem;
+}
+
+@media screen and (min-width: 75rem) {
+  .page-section {
+    padding-top: 9.4rem;
+    padding-bottom: 9.4rem;
+  }
+}
+
+.page-section__our-works {
+  padding-bottom: 9.4rem;
 }
 
 .page-section--dark {
@@ -721,12 +779,18 @@ address {
   font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 28px;
-  line-height: 33px;
-  /* identical to box height */
+  font-size: 2.8rem;
+  line-height: 1.17857;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+}
+
+@media screen and (min-width: 75rem) {
+  .page-section__title {
+    font-size: 3.6rem;
+    line-height: 1.1666;
+  }
 }
 
 .page-section__hero {
@@ -753,7 +817,7 @@ address {
 @media screen and (min-width: 48rem) {
   .page-section__hero {
     min-width: 76.8rem;
-    max-width: 160rem;
+    max-width: 120rem;
     background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_768x400@1x.jpg");
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_768x400@1x.jpg");
   }
@@ -766,6 +830,24 @@ address {
   }
 }
 
+@media screen and (min-width: 75rem) {
+  .page-section__hero {
+    min-width: 120rem;
+    max-width: 160rem;
+    padding-top: 20rem;
+    padding-bottom: 20rem;
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_1600x600@1x.jpg");
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_1600x600@1x.jpg");
+  }
+}
+
+@media screen and (min-width: 75rem) and (min-device-pixel-ratio: 2), screen and (min-width: 75rem) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 75rem) and (min-resolution: 192dpi), screen and (min-width: 75rem) and (min-resolution: 2dppx) {
+  .page-section__hero {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_1600x600@1x.jpg");
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_1600x600@1x.jpg");
+  }
+}
+
 .page-section__hero-title {
   max-width: 36rem;
   margin-top: 0;
@@ -773,7 +855,7 @@ address {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  line-height: 1.615;
+  line-height: 1.616;
   font-size: 2.6rem;
   font-weight: 900;
   letter-spacing: 0.06em;
@@ -805,7 +887,7 @@ address {
   }
 }
 
-@media screen and (max-width: 47.9rem) {
+@media screen and (max-width: 47.9375rem) {
   .peculiarities__item {
     max-width: 45rem;
     margin-right: auto;
@@ -821,6 +903,17 @@ address {
     -ms-flex-preferred-size: calc(50% - 4 * 1.5rem);
         flex-basis: calc(50% - 4 * 1.5rem);
     max-width: 35.4rem;
+    margin-top: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .peculiarities__item {
+    -ms-flex-preferred-size: calc((100% - 8 * 1.5rem)/4);
+        flex-basis: calc((100% - 8 * 1.5rem)/4);
     margin-top: 1.5rem;
     margin-right: 1.5rem;
     margin-bottom: 1.5rem;
@@ -884,6 +977,60 @@ address {
   }
 }
 
+.our-works {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: -3rem;
+  margin-left: -1.5rem;
+  margin-right: -1.5rem;
+}
+
+.our-works__item {
+  margin-top: 3rem;
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
+}
+
+.our-works__link {
+  position: relative;
+  display: block;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: bold;
+  line-height: 1.1429;
+  letter-spacing: 0.03em;
+  text-align: center;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+
+.our-works__link:hover .our-works__link-text,
+.our-works__link:focus .our-works__link-text {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.our-works__link-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 7rem;
+  padding-top: 2.7rem;
+  padding-bottom: 2.7rem;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8)));
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8));
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .our-team {
   display: block;
 }
@@ -905,7 +1052,7 @@ address {
   }
 }
 
-@media screen and (max-width: 47.9rem) {
+@media screen and (max-width: 47.9375rem) {
   .our-team__item {
     max-width: 45rem;
     margin-right: auto;
@@ -918,13 +1065,20 @@ address {
 
 @media screen and (min-width: 48rem) {
   .our-team__item {
-    -ms-flex-preferred-size: calc(50% - 4 * 1.5rem);
-        flex-basis: calc(50% - 4 * 1.5rem);
+    -ms-flex-preferred-size: calc((100% - 4 * 1.5rem)/2);
+        flex-basis: calc((100% - 4 * 1.5rem)/2);
     max-width: 35.4rem;
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .our-team__item {
+    -ms-flex-preferred-size: calc((100% - 8 * 1.5rem)/4);
+        flex-basis: calc((100% - 8 * 1.5rem)/4);
   }
 }
 
@@ -1001,8 +1155,17 @@ address {
 
 @media screen and (min-width: 48rem) {
   .clients__item {
-    -ms-flex-preferred-size: calc(100%/3 - 1.5rem * 6);
-        flex-basis: calc(100%/3 - 1.5rem * 6);
+    -ms-flex-preferred-size: calc((100% - 1.5rem * 6)/3);
+        flex-basis: calc((100% - 1.5rem * 6)/3);
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .clients__item {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -ms-flex-preferred-size: calc((100% - 1.5rem * 12)/6);
+        flex-basis: calc((100% - 1.5rem * 12)/6);
   }
 }
 
@@ -1033,6 +1196,13 @@ address {
   fill: #2196f3;
 }
 
+@media screen and (min-width: 75rem) {
+  .clients__link {
+    padding-left: 3.1rem;
+    padding-right: 3.1rem;
+  }
+}
+
 .backdrop-container {
   position: fixed;
   top: 0;
@@ -1047,7 +1217,8 @@ address {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 93.75%;
+  width: 93.5%;
+  max-width: 45rem;
   padding-top: 4rem;
   padding-bottom: 4rem;
   padding-left: 4rem;
@@ -1062,6 +1233,12 @@ address {
   transition: -webkit-transform 1s cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 75rem) {
+  .overlay {
+    max-width: 52.8rem;
+  }
 }
 
 .is-hidden {
@@ -1115,6 +1292,9 @@ address {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     margin-top: -1.5rem;
     margin-bottom: -1.5rem;
     margin-left: -1.5rem;
@@ -1138,9 +1318,9 @@ address {
           box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.12), 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.06), 0.1rem 0.4rem 0.6rem rgba(0, 0, 0, 0.16);
 }
 
-@media screen and (max-width: 47.9rem) {
+@media screen and (max-width: 47.9375rem) {
   .project-cards__item {
-    max-width: 45rem;
+    width: 45rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1151,11 +1331,29 @@ address {
 
 @media screen and (min-width: 48rem) {
   .project-cards__item {
-    max-width: 35.4rem;
+    -ms-flex-preferred-size: calc((100% - 4*1.5rem)/2);
+        flex-basis: calc((100% - 4*1.5rem)/2);
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+  }
+  .project-cards__item:last-child {
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .project-cards__item {
+    -ms-flex-preferred-size: calc((100% - 6*1.5rem)/3);
+        flex-basis: calc((100% - 6*1.5rem)/3);
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+  .project-cards__item:last-child {
+    margin-right: auto;
   }
 }
 
@@ -1254,6 +1452,13 @@ address {
   letter-spacing: 0.03em;
 }
 
+@media screen and (min-width: 75rem) {
+  .form-input--p {
+    padding-right: 1.2rem;
+    padding-left: 1.2rem;
+  }
+}
+
 .form-input--mb1 {
   margin-bottom: 1rem;
 }
@@ -1279,6 +1484,7 @@ address {
 
 .form-input__label--footer {
   display: block;
+  width: 100%;
   margin-bottom: 2rem;
   cursor: pointer;
 }
@@ -1288,18 +1494,11 @@ address {
   outline: 0.1rem solid #2196f3;
 }
 
-.form-input__label--checkbox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-left: 2.4rem;
-  font-size: 1.2rem;
-  line-height: 1.166;
-  letter-spacing: 0.03em;
-  cursor: pointer;
+@media screen and (min-width: 75rem) {
+  .form-input__label--footer {
+    margin-bottom: 0;
+    margin-right: 1.2rem;
+  }
 }
 
 .form-input__label {
@@ -1309,6 +1508,22 @@ address {
 
 .form-input__label-text {
   display: inline-block;
+}
+
+.form-input__label--checkbox {
+  padding-left: 2.4rem;
+  font-size: 1.2rem;
+  line-height: 1.166;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 75rem) {
+  .form-input__label--checkbox {
+    font-size: 1.4rem;
+    line-height: 1.71;
+    padding-left: 2.3rem;
+  }
 }
 
 .form-input__inner {
@@ -1411,15 +1626,14 @@ address {
   text-align: center;
 }
 
-.form-input__label--checkbox {
-  font-size: 1.2rem;
-}
-
 .form-input__icon--checkbox {
   left: 0;
-  bottom: 0;
+  bottom: 50%;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
   width: 1.6rem;
   height: 1.6rem;
+  vertical-align: middle;
   border: 0.2rem solid #212121;
   border-radius: 0.2rem;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1483,6 +1697,11 @@ address {
 
 .label-link {
   color: #2196f3;
+  vertical-align: middle;
+}
+
+.form-input__label--checkbox-text {
+  vertical-align: middle;
 }
 
 .footer {
@@ -1496,7 +1715,7 @@ address {
   color: #ffffff;
 }
 
-@media screen and (max-width: 47.9rem) {
+@media screen and (max-width: 47.9375rem) {
   .footer-block + .footer-block {
     margin-top: 6rem;
   }
@@ -1507,11 +1726,26 @@ address {
   margin-bottom: 0.8rem;
 }
 
+@media screen and (min-width: 75rem) {
+  .footer-address__text {
+    margin-bottom: 0.9rem;
+  }
+}
+
 @media screen and (min-width: 48rem) {
   .footer-block--mr70 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
     margin-bottom: 6rem;
+  }
+}
+
+@media screen and (min-width: 75rem) {
+  .footer-block--mr70 {
+    -ms-flex-preferred-size: 25%;
+        flex-basis: 25%;
+    margin-bottom: 6rem;
+    text-align: left;
   }
 }
 
@@ -1528,10 +1762,17 @@ address {
   }
 }
 
+@media screen and (min-width: 75rem) {
+  .footer-block--larger {
+    max-width: 57rem;
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
+
 .studio-socials__title {
   margin-top: 0;
   margin-bottom: 2rem;
-  text-align: center;
   text-transform: uppercase;
   font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
@@ -1550,11 +1791,31 @@ address {
           justify-content: center;
 }
 
+@media screen and (min-width: 48rem) {
+  .studio-socials {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 .studio-socials__item + .studio-socials__item {
   margin-left: 0.9rem;
 }
 
 .mail-form {
   text-align: center;
+}
+
+@media screen and (min-width: 75rem) {
+  .mail-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    text-align: left;
+  }
 }
 /*# sourceMappingURL=main.css.map */
