--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,7 +10,7 @@
 }
 
 .footer-block {
-  @media screen and (max-width: 47.9rem) {
+  @media screen and (max-width: 47.9375rem) {
     & + & {
       margin-top: 6rem;
     }
@@ -23,12 +23,22 @@
 .footer-address__text {
   display: inline-block;
   margin-bottom: 0.8rem;
+
+  @media screen and (min-width: 75rem) {
+      margin-bottom: 0.9rem;
+  }
 }
 
 .footer-block--mr70 {
   @media screen and (min-width: 48rem) {
     flex-basis: 50%;
     margin-bottom: 6rem;
+  }
+
+  @media screen and (min-width: 75rem) {
+    flex-basis: 25%;
+    margin-bottom: 6rem;
+    text-align: left;
   }
 }
 
@@ -40,12 +50,17 @@
   @media screen and (min-width: 48rem) {
     flex-basis: 100%;
   }
+
+  @media screen and (min-width: 75rem) {
+    max-width: 57rem;
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
 
 .studio-socials__title {
   margin-top: 0;
   margin-bottom: 2rem;
-  text-align: center;
   text-transform: uppercase;
   font-family: $main-font-family;
   font-weight: bold;
@@ -59,6 +74,10 @@
   @extend %list;
   display: flex;
   justify-content: center;
+
+  @media screen and (min-width: 48rem) {
+    justify-content: flex-start;
+  }
 }
 
 .studio-socials__item {
@@ -69,4 +88,11 @@
 
 .mail-form {
   text-align: center;
+
+  @media screen and (min-width: 75rem) {
+    display: flex;
+    align-items: flex-end;
+    text-align: left;
+
+  }
 }
