--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -14,7 +14,7 @@
 }
 
 .our-team__item {
-    @media screen and (max-width: 47.9rem) {
+    @media screen and (max-width: 47.9375rem) {
         max-width: 45rem;
         margin-right: auto;
         margin-left: auto;
@@ -25,12 +25,16 @@
     }
 
   @media screen and (min-width: 48rem) {
-    flex-basis: calc(50% - 4 * 1.5rem);
+    flex-basis: calc((100% - 4 * 1.5rem)/2);
     max-width: 35.4rem;
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+  }
+
+  @media screen and (min-width: 75rem) {
+    flex-basis: calc((100% - 8 * 1.5rem)/4);
   }
 }
 
