--- a/sass/layout/_our-works.scss
+++ b/sass/layout/_our-works.scss
@@ -1,5 +1,53 @@
 .page-section__our-works {
-    @media screen and (max-width: 74.9rem) {
-        display: none;
-    }
+  @media screen and (max-width: 74.9rem) {
+    display: none;
+  }
+}
+
+.our-works {
+  @extend %list;
+  display: flex;
+  font-family: $main-font-family;
+  margin-top: -3rem;
+  margin-left: -1.5rem;
+  margin-right: -1.5rem;
+}
+
+.our-works__item {
+  margin-top: 3rem;
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
+}
+
+.our-works__link {
+  position: relative;
+  display: block;
+  text-decoration: none;
+  color: $font-light-color;
+  font-size: 1.4rem;
+  font-weight: bold;
+  line-height: 1.1429;
+  letter-spacing: 0.03em;
+  text-align: center;
+  text-transform: uppercase;
+  overflow: hidden;
+
+  &:hover &-text,
+  &:focus &-text {
+    transform: translateY(0);
+  }
+}
+
+.our-works__link-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 7rem;
+  padding-top: 2.7rem;
+  padding-bottom: 2.7rem;
+
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8));
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
