--- a/sass/layout/_peculiarities.scss
+++ b/sass/layout/_peculiarities.scss
@@ -13,7 +13,7 @@
 }
 
 .peculiarities__item {
-  @media screen and (max-width: 47.9rem) {
+  @media screen and (max-width: 47.9375rem) {
     max-width: 45rem;
     margin-right: auto;
     margin-left: auto;
@@ -26,6 +26,14 @@
   @media screen and (min-width: 48rem) {
     flex-basis: calc(50% - 4 * 1.5rem);
     max-width: 35.4rem;
+    margin-top: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
+  }
+
+  @media screen and (min-width: 75rem) {
+    flex-basis: calc((100% - 8 * 1.5rem)/4);
     margin-top: 1.5rem;
     margin-right: 1.5rem;
     margin-bottom: 1.5rem;
