--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -28,6 +28,7 @@ address {
 
 %container {
   min-width: 32rem;
+  max-width: 100%;
   margin: 0 auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
