--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,7 +10,7 @@
   background-size: cover;
 
   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../../images/hero/hero-our-company_480x400@1x.jpg');
+    url("../../images/hero/hero-our-company_480x400@1x.jpg");
 
   background-repeat: no-repeat;
   background-position: center center;
@@ -19,20 +19,20 @@
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/hero/hero-our-company_480x400@2x.jpg');
+      url("../../images/hero/hero-our-company_480x400@2x.jpg");
   }
 
   @media screen and (min-width: 48rem) {
     min-width: 76.8rem;
     max-width: 120rem;
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/hero/hero-our-company_768x400@1x.jpg');
+      url("../../images/hero/hero-our-company_768x400@1x.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero/hero-our-company_768x400@2x.jpg');
+        url("../../images/hero/hero-our-company_768x400@2x.jpg");
     }
   }
 
@@ -43,13 +43,13 @@
     padding-bottom: 20rem;
 
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/hero/hero-our-company_1600x600@1x.jpg');
+      url("../../images/hero/hero-our-company_1600x600@1x.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero/hero-our-company_1600x600@1x.jpg');
+        url("../../images/hero/hero-our-company_1600x600@1x.jpg");
     }
   }
 }
