--- a/css/main.css
+++ b/css/main.css
@@ -833,9 +833,10 @@ address {
 @media screen and (min-width: 75rem) {
   .page-section__hero {
     min-width: 120rem;
-    max-width: 160rem;
+    max-width: 100%;
     padding-top: 20rem;
     padding-bottom: 20rem;
+    background-size: 160rem;
     background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero/hero-our-company_1600x600@1x.jpg");
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-our-company_1600x600@1x.jpg");
   }
