--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -38,9 +38,10 @@
 
   @media screen and (min-width: 75rem) {
     min-width: 120rem;
-    max-width: 160rem;
+    max-width: 100%;
     padding-top: 20rem;
     padding-bottom: 20rem;
+    background-size: 160rem;
 
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url('../../images/hero/hero-our-company_1600x600@1x.jpg');
