--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -38,7 +38,8 @@
 
   @media screen and (min-width: 75rem) {
     min-width: 120rem;
-    max-width: 160rem;
+    max-width: 100%;
+    background-size: 160rem;
     padding-top: 20rem;
     padding-bottom: 20rem;
 
