--- a/sass/layout/_page_section.scss
+++ b/sass/layout/_page_section.scss
@@ -36,8 +36,8 @@
 
     color: #212121;
 
-
     @media screen and (min-width: 75rem){
+      margin-bottom: 5rem;
       font-size: 3.6rem;
       line-height: 1.1666;
     }
