--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -14,6 +14,11 @@
 
   @media screen and (min-width: 48rem) {
     justify-content: center;
+    margin-bottom: calc(3rem - 0.75rem);
+  }
+
+  @media screen and (min-width: 75rem) {
+    margin-bottom: calc(5rem - 0.75rem);
   }
 }
 
@@ -27,7 +32,6 @@
 
 .project-cards {
   @extend %list;
-
 
   @media screen and (min-width: 48rem) {
     display: flex;
@@ -63,7 +67,7 @@
   }
 
   @media screen and (min-width: 48rem) {
-    flex-basis: calc((100% - 4*1.5rem)/2);
+    flex-basis: calc((100% - 4 * 1.5rem) / 2);
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
     margin-left: 1.5rem;
@@ -75,7 +79,7 @@
   }
 
   @media screen and (min-width: 75rem) {
-    flex-basis: calc((100% - 6*1.5rem)/3);
+    flex-basis: calc((100% - 6 * 1.5rem) / 3);
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
     margin-left: 1.5rem;
